До добавления ролей

--- a/Views/DisciplineTable/Index.cshtml
+++ b/Views/DisciplineTable/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Project.Models.Parser.Discipline>
+@model IEnumerable<Project.Areas.Admin.Models.Parser.Discipline>
 
 
 <!DOCTYPE html>
