--- a/Views/SemesterTable/Index.cshtml
+++ b/Views/SemesterTable/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Project.Models.Parser.Semester>
+@model IEnumerable<Project.Areas.Admin.Models.Parser.Semester>
 
 <!DOCTYPE html>
 <html lang="ru">
