--- a/Views/Profile/Index.cshtml
+++ b/Views/Profile/Index.cshtml
@@ -8,6 +8,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +16,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
+
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
@@ -33,6 +35,14 @@
                             <li class="list-group-item"><strong>Фамилия:</strong> @user.LastName</li>
                             <li class="list-group-item"><strong>Отчество:</strong> @user.FatherName</li>
                             <li class="list-group-item"><strong>Номер учебной группы:</strong> @user.GroupNumber</li>
+                            @if (ViewBag.IsAdmin)
+                            {
+                                <div class="card-footer text-center">
+                                    <form asp-area="" asp-controller="Admin" asp-action="Index">
+                                        <button type="submit" class="btn btn-warning">Управление пользователями</button>
+                                    </form>
+                                </div>
+                            }
                         </ul>
                     </div>
                     <div class="card-footer text-center">
@@ -48,5 +58,5 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
 
+</html>
